5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1723_2502.log
== SUBMITION (2019-05-14 11:01:04) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
t=0
fim n-1
i=0
while(i<=fim):
	t=t+(-1)**i*1/((2*1+1)*3**i)*sqrt(12)
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.135144
-- ERROR:
  File "/home/codebench/codes/1723/2502/main.py", line 4
    fim n-1
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:01:22) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
t=0
fim= n-1
i=0
while(i<=fim):
	t=t+(-1)**i*1/((2*1+1)*3**i)*sqrt(12)
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.153986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 9, in <module>
    print(round(soma,8))
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:02:38) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
soma=0
fim= n-1
i=0
while(i<=fim):
	soma=soma +(-1)**i*(1/((2*1+1)*3**i)*sqrt(12)
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.151072
-- ERROR:
  File "/home/codebench/codes/1723/2502/main.py", line 8
    i=i+1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:02:39) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
soma=0
fim= n-1
i=0
while(i<=fim):
	soma=soma +(-1)**i*(1/((2*1+1)*3**i)*sqrt(12)
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:03:23) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
soma=0
fim= n-1
i=0
while(i<=fim):
	soma=soma +(-1)**(i)*(1/((2*1+1)*3**i))*sqrt(12)
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.198269
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
0.86603029
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
0.86602546
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
0.86589341
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:56) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
soma=0
fim= n-1
i=0
while(i<=fim):
	soma=soma +(-1)**(i)*(1/((2*1+1)*3**i))*sqrt(12)
	i=i+1
print(round(soma,8))
-- OUTPUT:
0.86603029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:04:15) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
soma=0
fim= n-1
i=0
while(i<=fim):
	soma=soma +(-1)**(i)*1/((2*1+1)*3**i)*sqrt(12)
	i=i+1
print(round(soma,8))
-- OUTPUT:
0.86603029
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:55) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
soma=0
fim= n-1
i=0
while(i<=fim):
	soma=soma +((-1)**(i))*(1/((2*1+1)*3**i)*sqrt(12)
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 8
    i=i+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:13:08) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
soma=0
fim= n-1
i=0
while(i<=fim):
	soma=soma +((-1)**(i))*(1/((2*1+1))*3**i)*sqrt(12)
	i=i+1
print(round(soma,8))
-- OUTPUT:
51138.2227432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:17:33) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
t=0
pi=0
while(t<n):
	if(t%2==0):
	
		pi=pi+ 1/((1+(2*t))*(3**t))
		t=t+1
	else:
		pi=pi-1/((1+(2*t))*(3**t))
pi= pi*(12**0.5)
print(round(pi,8))
-- OUTPUT:
51138.2227432
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:18:18) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
t=0
pi=0
while(t<n):
	if(t%2==0):
	
		pi=pi+ 1/((1+(2*t))*(3**t))
		t=t+1
	else:
		pi=pi-1/((1+(2*t))*(3**t))
		t=t+1
pi= pi*(12**0.5)
print(round(pi,8))
-- EXECUTION TIME:
0.341338
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:24:02) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
t=0
pi=0
while(t<n):
	if(t%2==0):
	
		pi=pi+ 1/((1+(2*t))*(3**t))
		t=t+1
	else:
		pi=pi-1/((1+(2*t))*(3**t))
pi= pi*(12**0.5)
print(round(pi,8))
-- EXECUTION TIME:
389.345
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:36:42) 
-- CODE:
from math import*
n= int(input("qual seu termo geral? "))
t=0
pi=0
while(t<n):
	if(t%2==0):
	
		pi=pi+ 1/((1+(2*t))*(3**t))
		t=t+1
	else:
		pi=pi-1/((1+(2*t))*(3**t))
		t=t+1
pi= pi*(12**0.5)
print(round(pi,8))
-- EXECUTION TIME:
0.20325
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
